# nz-covid-scanner

./: LICENSE  README.md  nz-covid-scanner.service  pyproject.toml  run.sh
nz_covid_scanner/: covidqr.py  display.py  exceptions.py  led.py  main.py  scanner.py
nz_covid_scanner/fonts/: __init__.py
nz_covid_scanner/images/: __init__.py
tests/: test_nz_covid_scanner.py
